...
) {

  val showDeleteDialog = remember { mutableStateOf(false) }

  if (showDeleteDialog.value) {
    AlertDialog(
        modifier = Modifier.testTag("settingsDeleteDialog"),
        onDismissRequest = { showDeleteDialog.value = false },
        title = { Text(text = LocalContext.current.getString(R.string.delete_account)) },
        text = { Text(text = LocalContext.current.getString(R.string.delete_account_prompt)) },
        confirmButton = {
          Button(
              onClick = {
...
                deleteAccountAndNavigate()
              },
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.error,
                      contentColor = MaterialTheme.colorScheme.onError),
              modifier = Modifier.testTag("settingsDeleteButton")) {
                Text(LocalContext.current.getString(R.string.yes))
              }
        },
        dismissButton = {
          Button(onClick = { showDeleteDialog.value = false }) {
            Text(LocalContext.current.getString(R.string.no))
...
  }

  LazyColumn(
      modifier =
          Modifier.fillMaxSize()
              .padding(horizontal = 16.dp, vertical = 8.dp)
              .testTag("settingsScreen"),
      verticalArrangement = Arrangement.SpaceEvenly,
      horizontalAlignment = Alignment.CenterHorizontally) {
        item {
          MediumTopAppBar(
              modifier = Modifier.fillMaxWidth().testTag("settingsAppBar"),
              title = {
...

          FlowRow(
              modifier = Modifier.fillMaxWidth(),
              horizontalArrangement = Arrangement.SpaceBetween) {
                Button(
                    onClick = { signOutAndNavigate() },
                    modifier = Modifier.testTag("settingsSignOut")) {
                      Text(
                          text = LocalContext.current.getString(R.string.sign_out),
                          textAlign = TextAlign.Center)
                    }

                OutlinedButton(
                    modifier = Modifier.testTag("settingsDeleteAccount"),
                    onClick = { showDeleteDialog.value = true },
                    colors =
                        ButtonDefaults.outlinedButtonColors(
                            contentColor = MaterialTheme.colorScheme.error,
                            containerColor = MaterialTheme.colorScheme.surfaceVariant),
                    border = BorderStroke(1.dp, MaterialTheme.colorScheme.error)) {
...
