...
    }
    if (setUpOrSetting) {
      Text(
          text = LocalContext.current.getString(R.string.Account_setup),
          fontWeight = FontWeight.Bold,
          style = MaterialTheme.typography.displayLarge,
          modifier = Modifier.testTag("settingsTitle"),
          textAlign = TextAlign.Center)
    } else {
      Text(
          text = LocalContext.current.getString(R.string.settings),
          fontWeight = FontWeight.Bold,
          style = MaterialTheme.typography.displayLarge,
...
  Row(
      horizontalArrangement = Arrangement.SpaceBetween,
      modifier = Modifier.fillMaxWidth(),
      verticalAlignment = Alignment.CenterVertically) {
        Button(
            onClick = {},
            modifier = Modifier.testTag("languageDropDownButton"),
            enabled = true,
            shape = MaterialTheme.shapes.small,
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.surface,
                    contentColor = MaterialTheme.colorScheme.onBackground,
...
              DropDownMenuComponent(
                  items = Language.values().toList(),
                  selectedItem = language,
                  onItemSelected = { newLanguage: Language -> updateLanguage(newLanguage) },
                  toStr = { language -> language.resourcesToString(LocalContext.current) },
                  fieldText = LocalContext.current.getString(R.string.languague),
                  modifier = Modifier.testTag("settingsLanguage"))
            }
      }
}

@OptIn(ExperimentalLayoutApi::class)
@Composable
...
    Text(
        text = stringResource(id = R.string.select_fav_activity),
        style = MaterialTheme.typography.headlineSmall,
        fontWeight = FontWeight.Bold)
    Spacer(modifier = Modifier.height(8.dp))
    FlowRow(
        modifier = Modifier.testTag("settingsFavActivity").fillMaxWidth(),
        horizontalArrangement = Arrangement.SpaceEvenly) {
          for (activity in ActivityType.values()) {
            val tag = "settings${activity.name}"
            Button(
                modifier = Modifier.padding(1.dp).testTag(tag),
                onClick = { updatePrefActivity(activity) },
...
